# Redis-Event-Controller

./: README.md
CPP implementation/: CMakeLists.txt  client.cpp  server.cpp
Python implementation/: client.py  requirements.txt  server.py
